--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8">
+    <meta name="description" content="Minimalist Portfolio">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="author" content="Fahmi Nur Rosyid">
+  
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -20,7 +25,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Minimalist Portfolio</title>
   </head>
   <body>
     <div id="root">
